feat(di): add InversifyJS dependency injection infrastructure
Implements Iteration 0.4 from IMPLEMENTATION-PLAN.md, establishing a complete
dependency injection system using InversifyJS.

**Infrastructure:**
- Created DI container with InversifyJS (src/core/di-container.ts)
- Defined type identifiers using Symbol.for() (src/core/types.ts)
- Enabled TypeScript decorators in tsconfig.app.json
- Added reflect-metadata import to main.tsx

**Example Service:**
- Created IConfigService interface (src/interfaces/IConfigService.ts)
- Implemented ConfigService with @injectable decorator
- Provides getAppVersion(), isFeatureEnabled(), and getConfig() methods
- Reads from Vite environment variables

**Component Integration:**
- Updated App.tsx to use DI container instead of direct env access
- Demonstrates container.get<T> pattern for service resolution

**Testing:**
- ConfigService.test.ts: 10 tests covering all methods and edge cases
- di-container.test.ts: 5 tests for container functionality
- Maintained 100% code coverage across all new code

**Dependencies:**
- Added inversify ^7.10.8
- Added reflect-metadata ^0.2.2

**Documentation:**
- Updated .github/copilot-instructions.md with DI patterns
- Documented service creation workflow
- Added usage examples and important notes

**Verification:**
✅ 22 tests passing
✅ 100% coverage (statements, branches, functions, lines)
✅ TypeScript strict mode passing
✅ Production build successful (270.57 kB)

Closes #4 (if issue exists for Iteration 0.4)

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,7 +23,11 @@
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+
+    /* Decorators - Required for InversifyJS */
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "include": ["src"]
 }
