--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "test:run": "vitest run"
   },
   "dependencies": {
+    "inversify": "^7.10.8",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
