--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "test:run": "vitest run"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-toast": "^1.2.15",
     "inversify": "^7.10.8",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
