feat(landing): add interactive demo with floor plan and device controls
- Created DemoStats component with 4 metric cards
- Created DemoFloorPlan with clickable SVG rooms and temperature display
- Created DemoDevices with toggleable lights, switches, and sensors
- Integrated ComponentShowcase with COMPONENT_SHOWCASE feature flag
- Enabled NAVIGATION flag for new layout
- All demo components use native buttons (no cross-branch dependencies)

Part of trunk-based CI/CD - Iteration 1.2 complete on main

--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@ VITE_APP_VERSION=0.1.0
 # VITE_HA_ACCESS_TOKEN=your_long_lived_access_token_here
 
 # Feature Flags (all disabled for now)
+VITE_FEATURE_NAVIGATION=true
 VITE_FEATURE_FLOOR_PLAN=false
 VITE_FEATURE_HA_CONNECTION=false
 VITE_FEATURE_OVERLAYS=false
