refactor: update .gitignore to include all UI files and remove lighting configuration

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,6 @@ coverage
 *.sw?
 
 **/*--IGNORE*
-UI/floorplan.yaml
-UI/devices.yaml
-UI/climate.yaml
+UI/*
+!UI/*-example.yaml
+!UI/*-prototype.yaml
