--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,97 +1,206 @@
 {
-  "version": "2.0.0",
-  "tasks": [
-    {
-      "type": "npm",
-      "script": "dev",
-      "label": "pnpm: dev",
-      "isBackground": true,
-      "problemMatcher": {
-        "owner": "custom",
-        "pattern": {
-          "regexp": "^([^\\s].*):(\\d+):(\\d+):\\s+(warning|error):\\s+(.*)$",
-          "file": 1,
-          "line": 2,
-          "column": 3,
-          "severity": 4,
-          "message": 5
-        },
-        "background": {
-          "activeOnStart": true,
-          "beginsPattern": "Local:",
-          "endsPattern": "ready in"
-        }
-      }
-    },
-    {
-      "type": "npm",
-      "script": "build",
-      "label": "pnpm: build",
-      "group": {
-        "kind": "build",
-        "isDefault": true
-      },
-      "problemMatcher": ["$tsc"]
-    },
-    {
-      "type": "npm",
-      "script": "test",
-      "label": "pnpm: test",
-      "group": {
-        "kind": "test",
-        "isDefault": true
-      },
-      "problemMatcher": []
-    },
-    {
-      "type": "npm",
-      "script": "test:coverage",
-      "label": "pnpm: test:coverage",
-      "group": "test",
-      "problemMatcher": []
-    },
-    {
-      "type": "npm",
-      "script": "test:e2e",
-      "label": "pnpm: test:e2e",
-      "group": "test",
-      "problemMatcher": []
-    },
-    {
-      "type": "npm",
-      "script": "lint",
-      "label": "pnpm: lint",
-      "problemMatcher": ["$eslint-stylish"]
-    },
-    {
-      "type": "npm",
-      "script": "format",
-      "label": "pnpm: format",
-      "problemMatcher": []
-    },
-    {
-      "type": "npm",
-      "script": "type-check",
-      "label": "pnpm: type-check",
-      "problemMatcher": ["$tsc"]
-    },
-    {
-      "label": "Clean and Install",
-      "type": "shell",
-      "command": "Remove-Item -Recurse -Force node_modules, dist -ErrorAction SilentlyContinue; pnpm install",
-      "group": "none",
-      "presentation": {
-        "reveal": "always",
-        "panel": "new"
-      },
-      "problemMatcher": []
-    },
-    {
-      "label": "Preview Production Build",
-      "type": "shell",
-      "command": "pnpm build && pnpm preview",
-      "group": "none",
-      "problemMatcher": []
-    }
-  ]
+	"version": "2.0.0",
+	"tasks": [
+		{
+			"type": "npm",
+			"script": "dev",
+			"label": "pnpm: dev",
+			"isBackground": true,
+			"problemMatcher": {
+				"owner": "custom",
+				"pattern": {
+					"regexp": "^([^\\s].*):(\\d+):(\\d+):\\s+(warning|error):\\s+(.*)$",
+					"file": 1,
+					"line": 2,
+					"column": 3,
+					"severity": 4,
+					"message": 5
+				},
+				"background": {
+					"activeOnStart": true,
+					"beginsPattern": "Local:",
+					"endsPattern": "ready in"
+				}
+			}
+		},
+		{
+			"type": "npm",
+			"script": "build",
+			"label": "pnpm: build",
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			},
+			"problemMatcher": [
+				"$tsc"
+			]
+		},
+		{
+			"type": "npm",
+			"script": "test",
+			"label": "pnpm: test",
+			"group": {
+				"kind": "test",
+				"isDefault": true
+			},
+			"problemMatcher": []
+		},
+		{
+			"type": "npm",
+			"script": "test:coverage",
+			"label": "pnpm: test:coverage",
+			"group": "test",
+			"problemMatcher": []
+		},
+		{
+			"type": "npm",
+			"script": "test:e2e",
+			"label": "pnpm: test:e2e",
+			"group": "test",
+			"problemMatcher": []
+		},
+		{
+			"type": "npm",
+			"script": "lint",
+			"label": "pnpm: lint",
+			"problemMatcher": [
+				"$eslint-stylish"
+			]
+		},
+		{
+			"type": "npm",
+			"script": "format",
+			"label": "pnpm: format",
+			"problemMatcher": []
+		},
+		{
+			"type": "npm",
+			"script": "type-check",
+			"label": "pnpm: type-check",
+			"problemMatcher": [
+				"$tsc"
+			]
+		},
+		{
+			"label": "Clean and Install",
+			"type": "shell",
+			"command": "Remove-Item -Recurse -Force node_modules, dist -ErrorAction SilentlyContinue; pnpm install",
+			"group": "none",
+			"presentation": {
+				"reveal": "always",
+				"panel": "new"
+			},
+			"problemMatcher": []
+		},
+		{
+			"label": "Preview Production Build",
+			"type": "shell",
+			"command": "pnpm build && pnpm preview",
+			"group": "none",
+			"problemMatcher": []
+		},
+		{
+			"label": "vitest: run HomeAssistantWebSocketClient",
+			"type": "shell",
+			"command": "pnpm",
+			"args": [
+				"vitest",
+				"run",
+				"src/services/HomeAssistantWebSocketClient.test.ts"
+			],
+			"isBackground": false,
+			"problemMatcher": [],
+			"group": "test"
+		},
+		{
+			"label": "vitest: debug HomeAssistantWebSocketClient",
+			"type": "shell",
+			"command": "pnpm",
+			"args": [
+				"vitest",
+				"run",
+				"--reporter",
+				"verbose",
+				"src/services/HomeAssistantWebSocketClient.test.ts"
+			],
+			"isBackground": false,
+			"problemMatcher": []
+		},
+		{
+			"label": "vitest: run HomeAssistantWebSocketClient tests",
+			"type": "shell",
+			"command": "pnpm",
+			"args": [
+				"vitest",
+				"run",
+				"--reporter",
+				"verbose",
+				"src/services/HomeAssistantWebSocketClient.test.ts"
+			],
+			"isBackground": false,
+			"problemMatcher": [],
+			"group": "test"
+		},
+		{
+			"label": "vitest: run DebugPanel tests",
+			"type": "shell",
+			"command": "pnpm",
+			"args": [
+				"vitest",
+				"run",
+				"--reporter",
+				"verbose",
+				"src/components/DebugPanel.test.tsx"
+			],
+			"isBackground": false,
+			"problemMatcher": [],
+			"group": "test"
+		},
+		{
+			"label": "vitest: run App + FeatureFlagService tests",
+			"type": "shell",
+			"command": "pnpm",
+			"args": [
+				"vitest",
+				"run",
+				"--reporter",
+				"verbose",
+				"src/App.test.tsx",
+				"src/services/FeatureFlagService.test.ts"
+			],
+			"isBackground": false,
+			"problemMatcher": [],
+			"group": "test"
+		},
+		{
+			"label": "vitest: rerun App test verbose",
+			"type": "shell",
+			"command": "pnpm",
+			"args": [
+				"vitest",
+				"run",
+				"--reporter",
+				"verbose",
+				"src/App.test.tsx"
+			],
+			"isBackground": false,
+			"problemMatcher": [],
+			"group": "test"
+		},
+		{
+			"label": "vitest: rerun App test",
+			"type": "shell",
+			"command": "pnpm",
+			"args": [
+				"vitest",
+				"run",
+				"--reporter",
+				"verbose",
+				"src/App.test.tsx"
+			],
+			"isBackground": false,
+			"problemMatcher": [],
+			"group": "test"
+		}
+	]
 }
