feat: implement PrototypeShell component with climate and lighting features
- Added PrototypeShell component to manage climate and lighting panels.
- Integrated YAML parsing for climate and lighting configurations.
- Implemented state management for lighting and climate models.
- Created icons for sidebar navigation.
- Developed responsive layout with zoom and drag functionalities.
- Added tests for climate and lighting model normalization.
- Established interfaces for climate and lighting data structures.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,10 @@
   "references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }],
   "compilerOptions": {
     "forceConsistentCasingInFileNames": true,
-    "strict": true
+    "strict": true,
+
+    /* Decorators - Needed for esbuild/Vite dep scanning with InversifyJS */
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   }
 }
