--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,6 @@ VITE_OVERLAY_NETWORK=false
 # Development Flags
 VITE_FEATURE_COMPONENT_SHOWCASE=false
 VITE_FEATURE_ENTITY_DEBUG=false
+
+# Prototype → React parity UI (feature-flagged)
+VITE_FEATURE_PROTOTYPE_UI=false
