--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "inversify": "^7.10.8",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "yaml": "^2.8.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
