--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "reflect-metadata": "^0.2.2",
-    "yaml": "^2.8.2"
+    "yaml": "^2.8.2",
+    "zustand": "^5.0.3",
+    "immer": "^10.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
