--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "type-check": "tsc --noEmit",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage",
+    "test:coverage": "vitest run --coverage",
     "test:run": "vitest run"
   },
   "dependencies": {
