--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,8 @@ VITE_OVERLAY_NETWORK=false
 # Development Flags
 VITE_FEATURE_COMPONENT_SHOWCASE=false
 VITE_FEATURE_ENTITY_DEBUG=false
+
+# Tracking (ESPresense)
+# Minimum confidence required to accept a device position update.
+# Initial default: accept only when confidence > 69
+VITE_TRACKING_ESPRESENSE_MIN_CONFIDENCE=69
