--- a/.env.local.example
+++ b/.env.local.example
@@ -21,3 +21,7 @@ VITE_FEATURE_FLOOR_PLAN=true
 # VITE_OVERLAY_SURVEILLANCE=true
 # VITE_OVERLAY_AV=true
 # VITE_OVERLAY_NETWORK=true
+
+# Tracking (ESPresense)
+# Minimum confidence required to accept a device position update.
+VITE_TRACKING_ESPRESENSE_MIN_CONFIDENCE=69
