--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ VITE_FEATURE_HA_CONNECTION=false
 VITE_FEATURE_OVERLAYS=false
 VITE_FEATURE_ONBOARDING=false
 VITE_FEATURE_DEBUG_PANEL=false
+VITE_FEATURE_DEVICE_TRACKING=false
 
 # Overlay Flags (all disabled for now)
 VITE_OVERLAY_LIGHTING=false
