--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ VITE_FEATURE_HA_CONNECTION=false
 VITE_FEATURE_OVERLAYS=false
 VITE_FEATURE_ONBOARDING=false
 VITE_FEATURE_DEBUG_PANEL=false
+VITE_FEATURE_DEVICE_TRACKING=false
 
 # Overlay Flags (all disabled for now)
 VITE_OVERLAY_LIGHTING=false
@@ -26,3 +27,8 @@ VITE_OVERLAY_NETWORK=false
 # Development Flags
 VITE_FEATURE_COMPONENT_SHOWCASE=false
 VITE_FEATURE_ENTITY_DEBUG=false
+
+# Tracking (ESPresense)
+# Minimum confidence required to accept a device position update.
+# Initial default: accept only when confidence > 69
+VITE_TRACKING_ESPRESENSE_MIN_CONFIDENCE=69
