--- a/.env.local.example
+++ b/.env.local.example
@@ -14,6 +14,7 @@ VITE_FEATURE_FLOOR_PLAN=true
 # VITE_FEATURE_HA_CONNECTION=true
 # VITE_FEATURE_OVERLAYS=true
 # VITE_FEATURE_ONBOARDING=true
+# VITE_FEATURE_DEVICE_TRACKING=true
 
 # Enable all overlays
 # VITE_OVERLAY_LIGHTING=true
@@ -21,3 +22,7 @@ VITE_FEATURE_FLOOR_PLAN=true
 # VITE_OVERLAY_SURVEILLANCE=true
 # VITE_OVERLAY_AV=true
 # VITE_OVERLAY_NETWORK=true
+
+# Tracking (ESPresense)
+# Minimum confidence required to accept a device position update.
+VITE_TRACKING_ESPRESENSE_MIN_CONFIDENCE=69
