--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ VITE_FEATURE_OVERLAYS=false
 VITE_FEATURE_ONBOARDING=false
 VITE_FEATURE_DEBUG_PANEL=false
 VITE_FEATURE_DEVICE_TRACKING=false
+VITE_FEATURE_TRACKING_DEBUG_OVERLAY=false
 
 # Overlay Flags (all disabled for now)
 VITE_OVERLAY_LIGHTING=false
@@ -27,6 +28,12 @@ VITE_OVERLAY_NETWORK=false
 # Development Flags
 VITE_FEATURE_COMPONENT_SHOWCASE=false
 VITE_FEATURE_ENTITY_DEBUG=false
+
+# Tracking debug overlay
+# Controls what raw location values are shown next to each marker when
+# VITE_FEATURE_TRACKING_DEBUG_OVERLAY=true.
+# Allowed: xyz | geo
+VITE_TRACKING_DEBUG_OVERLAY_MODE=xyz
 
 # Tracking (ESPresense)
 # Minimum confidence required to accept a device position update.
