feat: enhance HomeAssistantEntityService to prefer WebSocket for fetching states and improve error handling
feat: add methods to HomeAssistantWebSocketClient for entity and device registry retrieval

feat: implement logger utility with configurable log levels and scoped logging

test: add unit tests for device location and tracker metadata stores

fix: ensure WebSocket connection reuses in-flight connections and queues messages during connecting state

refactor: update Vite configuration for better readability and maintainability

--- a/.env.example
+++ b/.env.example
@@ -39,3 +39,8 @@ VITE_TRACKING_DEBUG_OVERLAY_MODE=xyz
 # Minimum confidence required to accept a device position update.
 # Initial default: accept only when confidence > 69
 VITE_TRACKING_ESPRESENSE_MIN_CONFIDENCE=69
+
+# Logging
+# Controls client-side console verbosity.
+# Allowed: debug | info | warn | error | silent
+VITE_LOG_LEVEL=info
