feat: implement tracking stale timeout feature and related tests

--- a/.env.example
+++ b/.env.example
@@ -40,6 +40,11 @@ VITE_TRACKING_DEBUG_OVERLAY_MODE=xyz
 # Initial default: accept only when confidence > 69
 VITE_TRACKING_ESPRESENSE_MIN_CONFIDENCE=69
 
+# Tracking
+# Hide tracked device markers when no update has been received for more than N minutes.
+# Default: 30
+VITE_TRACKING_STALE_TIMEOUT_MINUTES=30
+
 # Logging
 # Controls client-side console verbosity.
 # Allowed: debug | info | warn | error | silent
