feat: add AgendaPanel and MediaPanel tests for visibility states
test: enhance TrackedDeviceMarkersBridge tests with stale warning environment variable

feat: implement tracking stale warning configuration and tests

fix: update DeviceLocationTrackingService to remove entities in away state

test: add SSR tests for HomeAssistantConnectionConfigService

refactor: simplify HomeAssistantConnectionConfigService tests

test: improve fetchStates() error handling in HomeAssistantEntityService

feat: enhance useDeviceTrackerMetadataStore with persistence and devtools

chore: update test setup for improved storage mocking and cleanup

test: add logger tests for empty scope behavior

chore: optimize vitest configuration for performance and memory usage

--- a/.env.example
+++ b/.env.example
@@ -37,13 +37,18 @@ VITE_TRACKING_DEBUG_OVERLAY_MODE=xyz
 
 # Tracking (ESPresense)
 # Minimum confidence required to accept a device position update.
-# Initial default: accept only when confidence > 69
 VITE_TRACKING_ESPRESENSE_MIN_CONFIDENCE=69
 
 # Tracking
 # Hide tracked device markers when no update has been received for more than N minutes.
 # Default: 30
 VITE_TRACKING_STALE_TIMEOUT_MINUTES=30
+
+# Tracking
+# When a tracked device is older than N minutes, keep it visible but render it as stale
+# (gray) with a "> N minutes" label.
+# Default: 10
+VITE_TRACKING_STALE_WARNING_MINUTES=10
 
 # Logging
 # Controls client-side console verbosity.
