--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "type-check": "tsc --noEmit",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest run --coverage",
+    "test:coverage": "node scripts/vitest-coverage.mjs",
     "test:run": "vitest run"
   },
   "dependencies": {
@@ -22,13 +22,13 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-toast": "^1.2.15",
+    "immer": "^10.1.1",
     "inversify": "^7.10.8",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "reflect-metadata": "^0.2.2",
     "yaml": "^2.8.2",
-    "zustand": "^5.0.3",
-    "immer": "^10.1.1"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -40,8 +40,9 @@
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
-    "@vitest/coverage-v8": "^4.0.16",
-    "@vitest/ui": "^4.0.16",
+    "@vitest/coverage-istanbul": "^4.0.16",
+    "@vitest/coverage-v8": "^4.0.17",
+    "@vitest/ui": "^4.0.17",
     "autoprefixer": "^10.4.23",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
@@ -56,6 +57,6 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4",
-    "vitest": "^4.0.16"
+    "vitest": "^4.0.17"
   }
 }
