--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ VITE_APP_VERSION=0.1.0
 
 # Feature Flags (all disabled for now)
 VITE_FEATURE_NAVIGATION=false
+VITE_FEATURE_REACT_FLOORPLAN_RENDERER=false
 VITE_FEATURE_FLOOR_PLAN=false
 VITE_FEATURE_HA_CONNECTION=false
 VITE_FEATURE_OVERLAYS=false
