Refactor feature flag handling and remove deprecated methods
- Removed `isFeatureEnabled` method from `IConfigService` and `ConfigService`.
- Updated `FeatureFlagService` to manage feature flags using environment variables and session storage.
- Introduced runtime overrides for feature flags with subscription support for React hooks.
- Added tests for new feature flag behavior and removed tests for deprecated methods.
- Introduced `floorplanJson` module with validation and loading functionality, including tests.
- Cleaned up unused imports and code related to feature flags in various components and tests.

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,27 +1,14 @@
-# Local Development Environment Variables
-# 
+#+#+#+#+ Local Development Environment Variables
+#
 # This file shows example values for local development and testing.
-# Copy this file to `.env.local` to override default .env values.
-# 
+# Copy this file to `.env.local` to override defaults.
+#
 # NOTE: .env.local is in .gitignore and will NOT be committed.
-# This allows you to test features locally without affecting CI/CD.
 
-# Enable features for testing
-VITE_FEATURE_DEBUG_PANEL=true
-VITE_FEATURE_FLOOR_PLAN=true
-
-# Enable all feature flags for full testing
-# VITE_FEATURE_HA_CONNECTION=true
-# VITE_FEATURE_OVERLAYS=true
-# VITE_FEATURE_ONBOARDING=true
-# VITE_FEATURE_DEVICE_TRACKING=true
-
-# Enable all overlays
-# VITE_OVERLAY_LIGHTING=true
-# VITE_OVERLAY_CLIMATE=true
-# VITE_OVERLAY_SURVEILLANCE=true
-# VITE_OVERLAY_AV=true
-# VITE_OVERLAY_NETWORK=true
+# Dev-only diagnostics and tools are controlled via URL query params (not env flags):
+# - Debug panel:        ?debug
+# - Tracking debug:     ?debugOverlay
+# - Lighting debug:     ?debugLights=1
 
 # Tracking (ESPresense)
 # Minimum confidence required to accept a device position update.
