--- a/.env.example
+++ b/.env.example
@@ -8,30 +8,9 @@ VITE_APP_VERSION=0.1.0
 # VITE_HA_WEBSOCKET_URL=ws://homeassistant.local:8123/api/websocket
 # VITE_HA_ACCESS_TOKEN=your_long_lived_access_token_here
 
-# Feature Flags (all disabled for now)
-VITE_FEATURE_NAVIGATION=false
-VITE_FEATURE_FLOOR_PLAN=false
-VITE_FEATURE_HA_CONNECTION=false
-VITE_FEATURE_OVERLAYS=false
-VITE_FEATURE_ONBOARDING=false
-VITE_FEATURE_DEBUG_PANEL=false
-VITE_FEATURE_DEVICE_TRACKING=false
-VITE_FEATURE_TRACKING_DEBUG_OVERLAY=false
-
-# Overlay Flags (all disabled for now)
-VITE_OVERLAY_LIGHTING=false
-VITE_OVERLAY_CLIMATE=false
-VITE_OVERLAY_SURVEILLANCE=false
-VITE_OVERLAY_AV=false
-VITE_OVERLAY_NETWORK=false
-
-# Development Flags
-VITE_FEATURE_COMPONENT_SHOWCASE=false
-VITE_FEATURE_ENTITY_DEBUG=false
-
 # Tracking debug overlay
-# Controls what raw location values are shown next to each marker when
-# VITE_FEATURE_TRACKING_DEBUG_OVERLAY=true.
+# Dev-only overlay enabled via URL query params in the UI.
+# This controls what raw location values are shown next to each marker.
 # Allowed: xyz | geo
 VITE_TRACKING_DEBUG_OVERLAY_MODE=xyz
 
