--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-toast": "^1.2.15",
+    "ajv": "^8.17.1",
     "immer": "^10.1.1",
     "inversify": "^7.10.8",
     "react": "^19.2.0",
