--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,10 @@
 # Application Version
 VITE_APP_VERSION=0.1.0
 
-# Home Assistant Connection (not configured yet)
-# VITE_HA_BASE_URL=http://homeassistant.local:8123
-# VITE_HA_WEBSOCKET_URL=ws://homeassistant.local:8123/api/websocket
-# VITE_HA_ACCESS_TOKEN=your_long_lived_access_token_here
+# Home Assistant Connection
+VITE_HA_BASE_URL=http://homeassistant.local:8123
+VITE_HA_WEBSOCKET_URL=ws://homeassistant.local:8123/api/websocket
+VITE_HA_ACCESS_TOKEN=your_long_lived_access_token_here
 
 # Tracking debug overlay
 # Dev-only overlay enabled via URL query params in the UI.
@@ -19,15 +19,15 @@ VITE_TRACKING_DEBUG_OVERLAY_MODE=xyz
 VITE_TRACKING_ESPRESENSE_MIN_CONFIDENCE=69
 
 # Tracking
-# Hide tracked device markers when no update has been received for more than N minutes.
-# Default: 30
-VITE_TRACKING_STALE_TIMEOUT_MINUTES=30
-
-# Tracking
 # When a tracked device is older than N minutes, keep it visible but render it as stale
 # (gray) with a "> N minutes" label.
 # Default: 10
 VITE_TRACKING_STALE_WARNING_MINUTES=10
+
+# Tracking
+# Hide tracked device markers when no update has been received for more than N minutes.
+# Default: 30
+VITE_TRACKING_STALE_TIMEOUT_MINUTES=30
 
 # Logging
 # Controls client-side console verbosity.
