--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "ajv": "^8.17.1",
     "immer": "^10.1.1",
     "inversify": "^7.10.8",
+    "konva": "^10.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-konva": "^19.2.1",
     "reflect-metadata": "^0.2.2",
     "yaml": "^2.8.2",
     "zustand": "^5.0.3"
