Feature/iteration-3.2-Konva-Setup (#29)
* Refactor feature flag handling and remove deprecated methods

- Removed `isFeatureEnabled` method from `IConfigService` and `ConfigService`.
- Updated `FeatureFlagService` to manage feature flags using environment variables and session storage.
- Introduced runtime overrides for feature flags with subscription support for React hooks.
- Added tests for new feature flag behavior and removed tests for deprecated methods.
- Introduced `floorplanJson` module with validation and loading functionality, including tests.
- Cleaned up unused imports and code related to feature flags in various components and tests.

* feat: implement WeatherSummary component with entity label service integration

* feat: enhance WeatherSummary component to handle label resolution retries

- Added lastUpdatedAt to trigger retries for label resolution in WeatherSummary.
- Modified state management to keep weatherEntityIds as null for retrying later.
- Updated useEffect dependencies for better handling of state changes.

refactor: streamline TrackedDeviceMarkersBridge delay calculation

- Simplified nextDelayMs calculation for clarity.

feat: add subscribeToStateChangesFiltered to IEntityService

- Introduced a new method to subscribe to state changes for specific entities.
- Updated IEntityService interface to include the new method.

feat: implement subscribeToTrigger in IHomeAssistantClient

- Added support for subscribing to triggers to reduce event volume.
- Updated HomeAssistantWebSocketClient to handle trigger subscriptions.

fix: optimize DeviceLocationTrackingService to skip unrelated entities

- Added early return in handleEntityState to avoid processing non-device_tracker entities.

test: enhance HomeAssistantEntityLabelService tests for device labels

- Added tests to ensure entity IDs are included when labels are applied to devices.

feat: update HomeAssistantEntityLabelService to support device labels

- Modified logic to include device la

--- a/.env.example
+++ b/.env.example
@@ -3,35 +3,14 @@
 # Application Version
 VITE_APP_VERSION=0.1.0
 
-# Home Assistant Connection (not configured yet)
-# VITE_HA_BASE_URL=http://homeassistant.local:8123
-# VITE_HA_WEBSOCKET_URL=ws://homeassistant.local:8123/api/websocket
-# VITE_HA_ACCESS_TOKEN=your_long_lived_access_token_here
-
-# Feature Flags (all disabled for now)
-VITE_FEATURE_NAVIGATION=false
-VITE_FEATURE_FLOOR_PLAN=false
-VITE_FEATURE_HA_CONNECTION=false
-VITE_FEATURE_OVERLAYS=false
-VITE_FEATURE_ONBOARDING=false
-VITE_FEATURE_DEBUG_PANEL=false
-VITE_FEATURE_DEVICE_TRACKING=false
-VITE_FEATURE_TRACKING_DEBUG_OVERLAY=false
-
-# Overlay Flags (all disabled for now)
-VITE_OVERLAY_LIGHTING=false
-VITE_OVERLAY_CLIMATE=false
-VITE_OVERLAY_SURVEILLANCE=false
-VITE_OVERLAY_AV=false
-VITE_OVERLAY_NETWORK=false
-
-# Development Flags
-VITE_FEATURE_COMPONENT_SHOWCASE=false
-VITE_FEATURE_ENTITY_DEBUG=false
+# Home Assistant Connection
+VITE_HA_BASE_URL=http://homeassistant.local:8123
+VITE_HA_WEBSOCKET_URL=ws://homeassistant.local:8123/api/websocket
+VITE_HA_ACCESS_TOKEN=your_long_lived_access_token_here
 
 # Tracking debug overlay
-# Controls what raw location values are shown next to each marker when
-# VITE_FEATURE_TRACKING_DEBUG_OVERLAY=true.
+# Dev-only overlay enabled via URL query params in the UI.
+# This controls what raw location values are shown next to each marker.
 # Allowed: xyz | geo
 VITE_TRACKING_DEBUG_OVERLAY_MODE=xyz
 
@@ -40,15 +19,15 @@ VITE_TRACKING_DEBUG_OVERLAY_MODE=xyz
 VITE_TRACKING_ESPRESENSE_MIN_CONFIDENCE=69
 
 # Tracking
-# Hide tracked device markers when no update has been received for more than N minutes.
-# Default: 30
-VITE_TRACKING_STALE_TIMEOUT_MINUTES=30
-
-# Tracking
 # When a tracked device is older than N minutes, keep it visible but render it as stale
 # (gray) with a "> N minutes" label.
 # Default: 10
 VITE_TRACKING_STALE_WARNING_MINUTES=10
+
+# Tracking
+# Hide tracked device markers when no update has been received for more than N minutes.
+# Default: 30
+VITE_TRACKING_STALE_TIMEOUT_MINUTES=30
 
 # Logging
 # Controls client-side console verbosity.
