--- a/.env.example
+++ b/.env.example
@@ -3,33 +3,36 @@
 # Application Version
 VITE_APP_VERSION=0.1.0
 
+# Logging
+# Controls client-side console verbosity.
+# Allowed: debug | info | warn | error | silent
+VITE_LOG_LEVEL=info
+
 # Home Assistant Connection
 VITE_HA_BASE_URL=http://homeassistant.local:8123
 VITE_HA_WEBSOCKET_URL=ws://homeassistant.local:8123/api/websocket
 VITE_HA_ACCESS_TOKEN=your_long_lived_access_token_here
 
-# Tracking debug overlay
-# Dev-only overlay enabled via URL query params in the UI.
-# This controls what raw location values are shown next to each marker.
-# Allowed: xyz | geo
-VITE_TRACKING_DEBUG_OVERLAY_MODE=xyz
-
-# Tracking (ESPresense)
-# Minimum confidence required to accept a device position update.
-VITE_TRACKING_ESPRESENSE_MIN_CONFIDENCE=69
+# Feature Flags
+VITE_FEATURE_DEBUG_PANEL=false
+VITE_FEATURE_TRACKING_DEBUG_OVERLAY=false
+VITE_FEATURE_SHOW_VIRTUAL_PANEL=true
 
 # Tracking
+# Minimum confidence required to accept a device position update.
+VITE_TRACKING_ESPRESENSE_MIN_CONFIDENCE=69
+VITE_TRACKING_SHOW_CONFIDENCE_WHEN_LESS_THAN_95=true
+
 # When a tracked device is older than N minutes, keep it visible but render it as stale
 # (gray) with a "> N minutes" label.
 # Default: 10
 VITE_TRACKING_STALE_WARNING_MINUTES=10
 
-# Tracking
 # Hide tracked device markers when no update has been received for more than N minutes.
 # Default: 30
 VITE_TRACKING_STALE_TIMEOUT_MINUTES=30
 
-# Logging
-# Controls client-side console verbosity.
-# Allowed: debug | info | warn | error | silent
-VITE_LOG_LEVEL=info
+# Dev-only overlay enabled via URL query params in the UI.
+# This controls what raw location values are shown next to each marker.
+# Allowed: xyz | geo
+VITE_TRACKING_DEBUG_OVERLAY_MODE=xyz
