feat: add confidence label for tracking markers and improve overlay management

--- a/.env.example
+++ b/.env.example
@@ -15,13 +15,13 @@ VITE_HA_ACCESS_TOKEN=your_long_lived_access_token_here
 
 # Feature Flags
 VITE_FEATURE_DEBUG_PANEL=false
-VITE_FEATURE_TRACKING_DEBUG_OVERLAY=false
 VITE_FEATURE_SHOW_VIRTUAL_PANEL=true
 
 # Tracking
 # Minimum confidence required to accept a device position update.
 VITE_TRACKING_ESPRESENSE_MIN_CONFIDENCE=69
-VITE_TRACKING_SHOW_CONFIDENCE_WHEN_LESS_THAN_95=true
+# Set the next value to display the confidence score when it's below a certain threshold
+# VITE_TRACKING_SHOW_CONFIDENCE_WHEN_LESS_THAN=90
 
 # When a tracked device is older than N minutes, keep it visible but render it as stale
 # (gray) with a "> N minutes" label.
