feat: optimize performance and add stage font scaling functionality

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,9 @@ VITE_HA_ACCESS_TOKEN=your_long_lived_access_token_here
 
 # Feature Flags
 VITE_FEATURE_DEBUG_PANEL=false
-VITE_FEATURE_SHOW_VIRTUAL_PANEL=true
+# Optional. Default: true.
+# Set to false to make the dashboard take up the full viewport.
+# VITE_FEATURE_SHOW_VIRTUAL_PANEL=false
 
 # Tracking
 # Minimum confidence required to accept a device position update.
