feat: enhance UI and performance auditing
- Added styles for boot splash screen in style.css to improve user experience during loading.
- Updated service worker registration in registerServiceWorker.ts to prevent flaky behavior during Lighthouse CI audits.
- Introduced .lighthouserc.cjs configuration for Lighthouse CI to ensure consistent performance metrics and reporting.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ dist-ssr
 *.local
 coverage
 
+# Lighthouse CI (generated reports / temp state)
+lighthouseci/
+.lighthouseci/
+
 # Environment variables
 .env
 .env.local
