--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,17 @@ jobs:
       - name: Build
         run: pnpm build
 
+      - name: Lighthouse CI (Performance + CWV)
+        run: pnpm lighthouse
+
+      - name: Upload Lighthouse reports (artifact)
+        uses: actions/upload-artifact@v4
+        if: ${{ always() }}
+        with:
+          name: lighthouseci
+          path: lighthouseci/
+          if-no-files-found: warn
+
       - name: Check build size
         run: |
           echo "Checking bundle size..."
