--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "lighthouse": "lhci autorun",
+    "lighthouse:ui": "lhci collect && lhci upload && node scripts/lhci-ui-smoke.mjs",
     "lighthouse:collect": "lhci collect",
     "lighthouse:assert": "lhci assert",
     "format": "prettier --write \"src/**/*.{ts,tsx,css,md}\"",
