Feat/5.3 performance optimization (#31)
* feat: optimize performance and add stage font scaling functionality

* feat: add stage icon scaling functionality and optimize related components

* feat: refactor floorplan model to support YAML format and enhance validation; add tests for PWA install button and floorplan data source

* feat: implement lazy loading for overlay components and optimize overlay management

* feat: add quick actions SVG icons and optimize DashboardQuickActions component

* feat: enhance UI and performance auditing

- Added styles for boot splash screen in style.css to improve user experience during loading.
- Updated service worker registration in registerServiceWorker.ts to prevent flaky behavior during Lighthouse CI audits.
- Introduced .lighthouserc.cjs configuration for Lighthouse CI to ensure consistent performance metrics and reporting.

* feat: add performance optimization through lazy loading and service worker registration improvements; enhance YAML parsing and dashboard controller structure

* feat: implement LightDetailsPanel for enhanced light control; add brightness, color temperature, and RGB color features; update LightingPanel to integrate LightDetailsPanel; enhance ILightService and HomeAssistantLightService for new functionalities; improve Vite config for robust public directory copying

* feat: enhance Lighthouse CI integration; update configuration for improved performance and add LHCI UI harness; implement modal for light details with error handling; optimize dialog components and styles

* feat: add dev container configuration for consistent development environment; include Node.js 20, pnpm setup, and essential VS Code extensions

* feat: enhance dev container setup; add Playwright installation and GitHub Copilot extensions for improved development experience

* feat: remove unnecessary folder paths from workspace configuration for cleaner setup

---------

Co-authored-by: Jeremy Pierson <GeekBlazed@users.noreply.github.co

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,8 @@ on:
     branches: [main]
 
 jobs:
-  test:
-    name: Test and Build
+  ci:
+    name: Lint, Typecheck, Test (Coverage), Build
     runs-on: ubuntu-latest
 
     steps:
@@ -21,7 +21,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: "22"
           cache: "pnpm"
 
       - name: Install dependencies
@@ -34,7 +34,10 @@ jobs:
         run: pnpm type-check
 
       - name: Run tests with coverage
-        run: pnpm test:run --coverage
+        run: pnpm test:coverage
+        env:
+          # Generate both HTML (artifact) and LCOV (Codecov).
+          VITEST_COVERAGE_REPORTERS: text-summary,lcovonly,html
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
@@ -45,8 +48,27 @@ jobs:
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
+      - name: Upload HTML coverage report (artifact)
+        uses: actions/upload-artifact@v4
+        if: ${{ always() }}
+        with:
+          name: coverage-html
+          path: coverage/
+          if-no-files-found: warn
+
       - name: Build
         run: pnpm build
+
+      - name: Lighthouse CI (Performance + CWV)
+        run: pnpm lighthouse
+
+      - name: Upload Lighthouse reports (artifact)
+        uses: actions/upload-artifact@v4
+        if: ${{ always() }}
+        with:
+          name: lighthouseci
+          path: lighthouseci/
+          if-no-files-found: warn
 
       - name: Check build size
         run: |
