--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pwa:icons": "node scripts/generate-pwa-icons.mjs"
   },
   "dependencies": {
+    "@iconify/react": "^6.0.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-switch": "^1.2.6",
